Переход на Spring MVC, добавление @Transactional и REST API, с возможностью деплоя на Tomcat